schema/testdata/validation_invalid_arbitrary_function_input_name/schema.keel
message MyCustomFunctionInput {
  titleSpecial Text
}

message MyCustomFunctionOutput {
  id ID
  title Text
}

model Post {
  fields {
    title Text
  }

  functions {
    write createPostSpecial(MyCustomFunctionInpu) returns(MyCustomFunctionOutput)
  }
}
